# Trading-Ideas

./: CMakeLists.txt  README.md
TradingIdeas/: CMakeLists.txt  K30Strategy.cpp  K30Strategy.h  TradingIdeas.cpp  TradingIdeas.h
